<resources>
    <string name="app_name">NewsFeed</string>
    <string name="top_news">Top News</string>
    <string name="deatils">Articles details</string>
    <string name="action_settings">Settings</string>
    <string name="tvDate">Date published</string>
    <string name="author">author</string>
    <string name="headline">Headline Title</string>
    <string name="description">headline description</string>
    <string name="sourceName">source name</string>
    <string name="desciption">source description</string>
    <string name="sourceUrl">source url</string>
    <string name="category">source category</string>
    <string name="title_activity_source">SourceActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="article">All Articles</string>
    <string name="sources">Tech Sources</string>
    <string name="technology">TechCrunch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
