<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/source_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sourceName"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/padding_text"/>
            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_text"
                android:layout_below="@+id/source_text"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/description" />

            <TextView
                android:id="@+id/category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_text"
                android:layout_below="@+id/description_text"
                android:text="@string/category"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold" />





        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>