<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:transitionName="img" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/headline"
                android:textColor="@color/colorTextTitle"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_text"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/author_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/description"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/author"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/description"
                android:layout_marginLeft="97dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/author_text"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tvDate" />

            <TextView
                android:id="@+id/source_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_text"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Source"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
